[package]
name = "webulastream"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.25"
bytes = "1.10.0"



crossbeam-channel = "0.5.14"
crossbeam-queue = "0.3.12"
threadpool = "1.8.1"
futures = { version = "0.3.31", features = ["thread-pool"] }