[package]
name = "distributed_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "distributed_bridge"
path = "src/lib.rs"

[dependencies]
cxx = "1.0.140"
distributed = { path = "../network" }
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
cxx-build = "1.0"