[package]
name = "distributed_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "distributed_bridge"
path = "src/lib.rs"

[dependencies]
cxx = "1.0.140"
distributed = { path = "../network" }
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
tokio-util = "0.7.13"

once_cell = "1.20"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
async-channel = "2.3.1"
log = "0.4.25"

[build-dependencies]
cxx-build = "1.0"