[package]
name = "distributed"
version = "0.1.0"
edition = "2021"

[lib]
name = "distributed"
path = "lib.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.25"
bytes = "1.10.0"
async-channel = "2.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"