[package]
name = "distributed"
version = "0.1.0"
edition = "2021"

[lib]
name = "distributed"
path = "lib.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
tokio-util = "0.7.13"
async-channel = "2.3.1"

bytes = "1.10.0"

tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0.217", features = ["derive"] }
flexbuffers = "25.2.10"