[package]
name = "distributed"
version = "0.1.0"
edition = "2021"

[lib]
name = "distributed"
path = "lib.rs"

[features]
json = []

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
async-channel = "2.3.1"

bytes = "1.10.0"

tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
flexbuffers = "25.2.10"
tokio-stream = "0.1.17"
tokio-serde = { version = "0.9", features = ["cbor", "serde_cbor"] }
futures = "0.3.31"
log = "0.4.25"